Fix order form on mobile, dogs.html, cats.html. Contact.html is not done on mobile

--- a/PA 1/myStyle.css
+++ b/PA 1/myStyle.css
@@ -220,7 +220,8 @@ img {
 @media only screen and (min-width: 0px) {
   /* For desktop: */
   .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
+  /* .col-2 {width: 16.66%;} */
+  .col-2 {width: 100%;}
   .col-3 {width: 100%;}
   .col-4 {width: 33.33%;}
   .col-5 {width: 41.66%;}
